--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+
+body::before{
+    display: block;
+    content: '' ;
+    height: '60px';
+}
+
 @media (min-width: 768px) {
     .nes-input{
         width: 50%;
